...
    case paulSchmiedmayer = "Paul Schmiedmayer, Ph.D."
    case shriyaReddy = "Shriya Reddy"
    case audreyLin = "Audrey Lin"
    case vishnuRavi = "Vishnu Ravi, MD"
    case adamZhao = "Adam Zhao"
    case anushehChaudry = "Anusheh Chaudry"
    case emmyThamakaison = "Emmy Thamakaison"
    case ananyaVasireddy = "Ananya Vasireddy"
    case sarahBarragan = "Sarah Barragan"
    case caitlinKunchur = "Caitlin Kunchur"
    case sherryXie = "Sherry Xie"
    case andyWang = "Andy Wang"
    case rajPabari = "Raj Pabari"
...
