...
import SwiftUI

struct PictureView: View {
    @State private var detail: String? = nil
    private var imageNames = ["NewYork", "Riggy",  "Stanford"]
    private var imageDetails = [
        "NewYork": "Me and my friends in NY this summer!",
        "Riggy": "The cutest dog ever, Riggins!",
        "Stanford": "My brother and I at Stanford!"]
        
    var body: some View {
        VStack (spacing: 6) {
            Text("My Gallery")
                .font(.custom(
...
